Fixed mobile home page spacing bug, resized/repositioned face hex.

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -141,7 +141,7 @@
     margin-bottom: 100px;
 }
 
-@media (max-width: 700px) {
+@media only screen and (max-width: 700px) {
     #scroll-arrow {
         right: 15%;
         border-left: 10px solid transparent;
