--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -269,7 +269,7 @@ h3 {
     color: white;
 }
 
-@media (max-width: 750px) {
+@media only screen and (max-width: 750px) {
     .hex-box-other {
         left: -7%;
     }
