--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -56,7 +56,7 @@
     transition-duration: 0.3s;
 }
 
-@media (max-width: 700px) {
+@media only screen and (max-width: 700px) {
     .contact-box {
         margin-left: 0%;
         padding-top: 8%;
