--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -249,7 +249,7 @@
     transition-duration: 0.2s;
 }
 
-@media (max-width: 700px) {
+@media only screen and (max-width: 700px) {
     #project-bg-left {
         left: -500px;
     }
